# CG_Labs

./: .gitmodules  README.md
lab_0/: CMakeLists.txt  README.md
lab_0/docs/: ClassDiagram.drawio  ClassDiagrammInClass.drawio
lab_0/src/: canvas.cpp  canvas.hpp  circle.cpp  circle.hpp  item.cpp  item.hpp  line.cpp  line.hpp  main.cpp  picture.cpp  picture.hpp  point.cpp  point.hpp  triangle.cpp  triangle.hpp
lab_1/: CMakeLists.txt
lab_1/src/: main.cpp
lab_2/: CMakeLists.txt
lab_2/src/: main.cpp
